# pypiversions

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  tox.ini
pypiversion/: main.py
samples/: openstack_clients.yaml  openstack_library.yaml  stackforge_clients.yaml
templates/: ghostcloud.tmpl
