[metadata]
name = pypyversions
summary = Tool to generate a listing of PyPi packages
description-file = README.rst
author = Christian Berendt
author-email = mail@cberendt.net
home-page = https://github.com/ghostcloud/pypyversions
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
